fix navbar alignment

--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -260,7 +260,7 @@ select {
       a {
         display: block;
         color: #fff;
-        padding: 10pt 20pt;
+        padding: 10pt 0pt;
         font-size: 1.3em;
       }
     }
